bpo-29859: Remove redundant variable assignment and set error indicator